# video-stabilizer

./: Dockerfile  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-video-stabilizer  docker_deployment.sh  docker_image_building.sh  processing_container_docker_deployment.sh  processing_container_docker_image_building.sh
k3d/: cumsum_server_deployment.yaml  flow_server_deployment.yaml  k3d_config.yaml  processing_container_deployment.yaml  smooth_server_deployment.yaml  stabilize_server_deployment.yaml  video_stabilizer_deployment.yaml  video_stabilizer_job.yaml  video_stabilizer_pod.yaml
vanilla_video_stabilizer/: vanilla_video_stabilizer.py
video_stabilizer/: BUILD.bazel  Dockerfile  video_stabilizer.py
video_stabilizer_clients/: BUILD.bazel  cumsum_client.py  flow_client.py  smooth_client.py  stabilize_client.py
video_stabilizer_proto/: video_stabilizer.proto
video_stabilizer_ray/: BUILD.bazel  video_stabilizer_ray.py
video_stabilizer_server/: BUILD.bazel  cumsum_server.py  flow_server.py  smooth_server.py  stabilize_server.py
video_stabilizer_server/cumsum_server/: BUILD.bazel  Dockerfile  cumsum_server.py
video_stabilizer_server/flow_server/: BUILD.bazel  Dockerfile  flow_server.py
video_stabilizer_server/processing_container/: Dockerfile  processing_container.sh
video_stabilizer_server/smooth_server/: BUILD.bazel  Dockerfile  smooth_server.py
video_stabilizer_server/stabilize_server/: BUILD.bazel  Dockerfile  stabilize_server.py
video_stabilizer_wrappers/: cumsum.py  flow.py  smooth.py  stabilizer.py
