load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:defs.bzl", "py_test")

py_binary (
    name = "video_stabilizer",
    srcs = ["video_stabilizer.py"],
    deps = [
        "//video_stabilizer_server:stabilize_server",
        "//video_stabilizer_server:flow_server",
        "//video_stabilizer_server:cumsum_server",
        "//video_stabilizer_server:smooth_server",
        "//video_stabilizer_proto:video_stabilizer_py_proto",
        "//video_stabilizer_proto:video_stabilizer_py_grpc",
        "//video_stabilizer_clients:stabilize_client",
        "//video_stabilizer_clients:smooth_client",
        requirement("grpcio"),
        requirement("grpcio-tools"),
        requirement("opencv-python-headless"),
        requirement("numpy"),
        requirement("pickle5"),
    ],
)

"""
py_test (
    name = "video_stabilizer_test",
    srcs = ["video_stabilizer_test.py"],
    deps = [
        "//video_stabilizer:stabilizer",
        "//video_stabilizer_proto:video_stabilizer_proto",
    ]
)
"""