load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary (
    name = "cumsum_client",
    srcs = ["cumsum_client.py"],
    deps = [
        "//video_stabilizer_proto:video_stabilizer_py_proto",
        "//video_stabilizer_proto:video_stabilizer_py_grpc",
        requirement("grpcio"),
        requirement("grpcio-tools"),
    ],
    visibility = ["//visibility:public"],
)

py_binary (
    name = "flow_client",
    srcs = ["flow_client.py"],
    deps = [
        "//video_stabilizer_proto:video_stabilizer_py_proto",
        "//video_stabilizer_proto:video_stabilizer_py_grpc",
        requirement("grpcio"),
        requirement("grpcio-tools"),
    ],
    visibility = ["//visibility:public"],
)

py_binary (
    name = "smooth_client",
    srcs = ["smooth_client.py"],
    deps = [
        "//video_stabilizer_proto:video_stabilizer_py_proto",
        "//video_stabilizer_proto:video_stabilizer_py_grpc",
        requirement("grpcio"),
        requirement("grpcio-tools"),
    ],
    visibility = ["//visibility:public"],
)

py_binary (
    name = "stabilize_client",
    srcs = ["stabilize_client.py"],
    deps = [
        "//video_stabilizer_proto:video_stabilizer_py_proto",
        "//video_stabilizer_proto:video_stabilizer_py_grpc",
        requirement("grpcio"),
        requirement("grpcio-tools"),
    ],
    visibility = ["//visibility:public"],
)