load("@rules_python//python:defs.bzl", "py_binary")
load("@python_deps//:requirements.bzl", "requirement")

py_binary (
    name = "cumsum_server",
    srcs = ["cumsum_server.py"],
    deps = [
        "//video_stabilizer_proto:video_stabilizer_py_proto",
        "//video_stabilizer_proto:video_stabilizer_py_grpc",
        requirement("grpcio"),
        requirement("grpcio-tools"),
        requirement("opencv-python-headless"),
        requirement("numpy"),
        requirement("pickle5"),
        requirement("boto3")
    ],
    visibility = ["//visibility:public"]
)